# lolburst

./: .env  Cargo.toml
resources/: all_data.json  allgamedata.json  game_data.json
resources/active_player/: active_player_0.json  active_player_1.json  active_player_10.json  active_player_11.json  active_player_12.json  active_player_13.json  active_player_14.json  active_player_15.json  active_player_16.json  active_player_17.json  active_player_18.json  active_player_19.json  active_player_2.json  active_player_20.json  active_player_21.json  active_player_22.json  active_player_23.json  active_player_24.json  active_player_25.json  active_player_26.json  active_player_27.json  active_player_28.json  active_player_29.json  active_player_3.json  active_player_30.json  active_player_31.json  active_player_32.json  active_player_33.json  active_player_34.json  active_player_35.json  active_player_36.json  active_player_37.json  active_player_38.json  active_player_39.json  active_player_4.json  active_player_40.json  active_player_41.json  active_player_42.json  active_player_43.json  active_player_44.json  (+40 more)
resources/all_data/: all_data_100.json  all_data_101.json  all_data_102.json  all_data_103.json  all_data_104.json  all_data_105.json  all_data_106.json  all_data_107.json  all_data_108.json  all_data_109.json  all_data_11.json  all_data_110.json  all_data_111.json  all_data_112.json  (+904 more)
src/: .env  active_player.rs  all_players.rs  app.rs  champion.rs  champions.rs  config.rs  data.rs  dmg.rs  game_data.rs  handlers.rs  main.rs  network.rs  ui.rs  utils.rs
(+175 files in other folders)
