[package]
name = "lolburst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }
log = "0.4.17"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
tui = "0.18.0"
crossterm = "0.24"